Bug 314130 input numbers twice when using Unispim IME at chinese input mode r=ere, sr=roc